# soc-dedup

./: .gitignore  README.md  pyproject.toml
data/: sample_alerts.json
socdedup/: blast_radius.py  cli.py  clustering.py  confidence.py  decision.py  ingest.py  models.py  reasoning.py
tests/: test_clustering.py  test_decision.py  test_ingest.py  test_reasoning.py
